--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="/styles.css">
     <title>React App</title>
   </head>
-  <body class="bg-classroom bg-cover">
+  <body class="bg-classroom bg-cover bg-fixed">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="overlay"></div>
     <div id="root"></div>
